--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 网站的名称，会显示在浏览器的 Tab 中，根据你自己的需要进行修改 -->
     <title>Bestony 的书评搜索</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
@@ -12,15 +13,19 @@
   <section class="section">
     <div class="container">
       <div class="has-text-centered">
-        <img src="https://postimg.aliavv.com/newmbp/z4vxb.png" alt="" width="150">
-        <h1 class="title has-text-weight-bold " style="padding:20px;">
+        <!-- 图片地址替换为你自己的 Logo 的地址 -->
+        <img src="https://postimg.aliavv.com/newmbp/z4vxb.png" alt="Logo" width="150">
+        <!-- 页面的 Title -->
+        <h1 class="title" style="padding:20px;">
         书评搜索
         </h1>
+        <!-- 页面的描述 -->
         <p class="subtitle ">
           个人书评搜索引擎
         </p>
         <script>
           (function() {
+            // 下方的 cx 的值替换为你的搜索引擎 ID ，可以在搜索引擎-设置-基本设置中获取。
             var cx = '015460718854873601070:ygsbxzbiph8';
             var gcse = document.createElement('script');
             gcse.type = 'text/javascript';
@@ -30,9 +35,11 @@
             s.parentNode.insertBefore(gcse, s);
           })();
         </script>
+        <!-- 搜索引擎的输入框 -->
         <gcse:searchbox></gcse:searchbox>
       </div>
       <div>
+        <!-- 搜索引擎结果框 -->
         <gcse:searchresults></gcse:searchresults>
       </div>
     </div>
